--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="hero-image">
-        <img class="hero" alt="Hero image" />
+        <img src="" class="hero" alt="Hero image" />
       </div>
 
       <div class="content">
